Entity creada Dao Creado Database Creada Repositorio empezando el ViewModel ViewModel terminando itemlist adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,12 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
+    <string name="textitem">Nombre del Item  :</string>
+    <string name="textprecio">Precio unidad  :</string>
+    <string name="textcant">Cantidad  :</string>
+    <string name="textot">Total Actual</string>
+    <string name="textboton">Guardar</string>
+
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
